[gd_scene load_steps=59 format=3 uid="uid://bsdwfpota0gns"]

[ext_resource type="Script" path="res://Scripts/cat.gd" id="1_4csyg"]
[ext_resource type="Texture2D" uid="uid://dakojde8f2r0a" path="res://Sprite/PisztaCica2.png" id="2_sxvjt"]
[ext_resource type="Texture2D" uid="uid://3ngvcjchh342" path="res://Sprite/Cica4.png" id="3_grw0s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8ve3"]
size = Vector2(86, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_shc2v"]
atlas = ExtResource("2_sxvjt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_etk1e"]
atlas = ExtResource("2_sxvjt")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nish3"]
atlas = ExtResource("2_sxvjt")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_js5jj"]
atlas = ExtResource("2_sxvjt")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3d28"]
atlas = ExtResource("2_sxvjt")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo3sq"]
atlas = ExtResource("2_sxvjt")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vyw7"]
atlas = ExtResource("2_sxvjt")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jiom4"]
atlas = ExtResource("2_sxvjt")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp0ra"]
atlas = ExtResource("2_sxvjt")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w6wn"]
atlas = ExtResource("2_sxvjt")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0c8f"]
atlas = ExtResource("2_sxvjt")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_btxfa"]
atlas = ExtResource("2_sxvjt")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcmum"]
atlas = ExtResource("2_sxvjt")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuvxi"]
atlas = ExtResource("2_sxvjt")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbc4d"]
atlas = ExtResource("2_sxvjt")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_es4ps"]
atlas = ExtResource("2_sxvjt")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n02m"]
atlas = ExtResource("2_sxvjt")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmb1t"]
atlas = ExtResource("2_sxvjt")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v07ad"]
atlas = ExtResource("2_sxvjt")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tgrw"]
atlas = ExtResource("2_sxvjt")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsgjc"]
atlas = ExtResource("2_sxvjt")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj6ct"]
atlas = ExtResource("2_sxvjt")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwk2o"]
atlas = ExtResource("2_sxvjt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjf8j"]
atlas = ExtResource("2_sxvjt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbix5"]
atlas = ExtResource("2_sxvjt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0126v"]
atlas = ExtResource("2_sxvjt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5jbyg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shc2v")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_etk1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nish3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_js5jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3d28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo3sq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vyw7")
}],
"loop": false,
"name": &"play",
"speed": 4.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_jiom4")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_sp0ra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w6wn")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_t0c8f")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_btxfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcmum")
}],
"loop": false,
"name": &"rest",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuvxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbc4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es4ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n02m")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmb1t")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_v07ad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tgrw")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_vsgjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj6ct")
}],
"loop": false,
"name": &"wake_up",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwk2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjf8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbix5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0126v")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_q4kt6"]
atlas = ExtResource("3_grw0s")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_du8bo"]
atlas = ExtResource("3_grw0s")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_akr35"]
atlas = ExtResource("3_grw0s")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_umhrw"]
atlas = ExtResource("3_grw0s")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf8ml"]
atlas = ExtResource("3_grw0s")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hoil"]
atlas = ExtResource("3_grw0s")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_trlf4"]
atlas = ExtResource("3_grw0s")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7ss5"]
atlas = ExtResource("3_grw0s")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixm5s"]
atlas = ExtResource("3_grw0s")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmevk"]
atlas = ExtResource("3_grw0s")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1q11"]
atlas = ExtResource("3_grw0s")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vx6p"]
atlas = ExtResource("3_grw0s")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv6m6"]
atlas = ExtResource("3_grw0s")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu1dl"]
atlas = ExtResource("3_grw0s")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i63xm"]
atlas = ExtResource("3_grw0s")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ccx6"]
atlas = ExtResource("3_grw0s")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hat0g"]
atlas = ExtResource("3_grw0s")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocgrp"]
atlas = ExtResource("3_grw0s")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r6yk"]
atlas = ExtResource("3_grw0s")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0x1ju"]
atlas = ExtResource("3_grw0s")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n8ck"]
atlas = ExtResource("3_grw0s")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j83hk"]
atlas = ExtResource("3_grw0s")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_360ro"]
atlas = ExtResource("3_grw0s")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8axaa"]
atlas = ExtResource("3_grw0s")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt532"]
atlas = ExtResource("3_grw0s")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv6av"]
atlas = ExtResource("3_grw0s")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_340yf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4kt6")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_du8bo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akr35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umhrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf8ml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hoil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trlf4")
}],
"loop": false,
"name": &"play",
"speed": 4.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_y7ss5")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_ixm5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmevk")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_c1q11")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_6vx6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv6m6")
}],
"loop": false,
"name": &"rest",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu1dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i63xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ccx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hat0g")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocgrp")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_4r6yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0x1ju")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_7n8ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j83hk")
}],
"loop": false,
"name": &"wake_up",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_360ro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8axaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt532")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv6av")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[node name="Cat" type="Area2D"]
script = ExtResource("1_4csyg")
metadata/_edit_horizontal_guides_ = [-100.0]
metadata/_edit_vertical_guides_ = [-36.0]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -34.5)
shape = SubResource("RectangleShape2D_a8ve3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -49)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_5jbyg")
animation = &"walk"
autoplay = "walk"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -49)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_340yf")
animation = &"wake_up"
autoplay = "walk"

[node name="RestTimer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D2" to="." method="_on_animated_sprite_2d_2_animation_finished"]
[connection signal="timeout" from="RestTimer" to="." method="_on_rest_timer_timeout"]
